@@ -1,9 +1,6 @@
 package org.example;
 
-import model.ChunkTask;
-import model.Task;
-import model.TaskStatus;
-import model.TaskType;
+import model.*;
 
 import javax.json.JsonObject;
 import java.io.BufferedReader;
@@ -29,12 +26,13 @@ public class TaskController {
         //Decide whats the type of the type of task to be handled and
         //decide flow of execution appropriately
         zController.updateTaskStatus(tid, TaskStatus.RUNNING);
-        long noc = tData.getJsonNumber("numOfChunks").longValue();
-        long offset = tData.getJsonNumber("offset").longValue();
-        long csz = tData.getJsonNumber("chunkSize").longValue();
-        ChunkTask t = new ChunkTask(tid, tData.getString("onworker"), tData.getString("command"), tid, TaskType.CHUNK, "/app/"+tData.getString("dataset"), noc, offset, csz);
         //CHUNK TASK
         if(taskType.equals("chunk")){
+            long noc = tData.getJsonNumber("numOfChunks").longValue();
+            long offset = tData.getJsonNumber("offset").longValue();
+            long csz = tData.getJsonNumber("chunkSize").longValue();
+            ChunkTask t = new ChunkTask(tid, tData.getString("onworker"), tData.getString("command"), tid, TaskType.CHUNK, "/app/"+tData.getString("dataset"), noc, offset, csz);
+
             System.out.println("Following execution pattern for Chunk Task");
             String znodePath = t.getZnodePath();
 
@@ -67,32 +65,45 @@ public class TaskController {
             }else{
                 zController.updateTaskStatus(tid, TaskStatus.FAILED);
             }
-        }else{
+
+
+        }else if(taskType.equals("map")){
+            System.out.println("Accepted Map Task");
+            int index = tData.getJsonNumber("index").intValue();
+            MapTask t = new MapTask(tid,tData.getString("onworker"), tid, tData.getString("command"), TaskType.MAP, index, tData.getString("function"));
+            System.out.println(t.toString());
+            String result = systemExecTask(tData.getString("function"));
+            if(result.equals("error")){
+                zController.updateTaskStatus(tid, TaskStatus.COMPLETED);
+                System.out.println("Success");
+            }else{
+                zController.updateTaskStatus(tid, TaskStatus.FAILED);
+                System.out.println("Failed");
+            }
+        }  else{
             System.out.println("Task invalid. Failure");
             zController.updateTaskStatus(tid, TaskStatus.FAILED);
         }
     }
 
-    public String systemExecTask(String cmd){
-        String result = "";
+    public String systemExecTask(String command){
         try {
-            Process process = Runtime.getRuntime().exec(cmd);
-            BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
-            String line;
-            while ((line = reader.readLine()) != null) {
-                result = line+"\n";
+            // Execute the command
+            System.out.println("Will execute command: "+ command);
+            Process process = new ProcessBuilder(command).start();
+            // Wait for the process to finish
+            int exitCode = process.waitFor();
+
+            // Optionally, handle the exit code or perform other actions based on the result
+            if (exitCode == 0) {
+                System.out.println("JAR execution completed successfully.");
+                return String.valueOf(exitCode);
+            } else {
+                System.out.println("JAR execution failed with exit code: " + exitCode);
+                return "error";
             }
-            reader.close();
-        } catch (IOException e) {
-            return e.getMessage();
+        } catch (IOException | InterruptedException e) {
+            return "error";
         }
-        return result;
     }
-    public void goIntoIdle(){
-
-    }
-    public String writeResultsOfTaskToZk(){
-        return null;
-    }
-
 }
